--- a/mind_map_app/pubspec.yaml
+++ b/mind_map_app/pubspec.yaml
@@ -10,6 +10,7 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_hooks: ^0.20.5
+  path_provider: ^2.1.2
   flutter_vicr_widgets:
     git: https://github.com/VictorRyan3612/flutter_vicr_widgets.git
   cupertino_icons: ^1.0.6
