--- a/mind_map_app/pubspec.yaml
+++ b/mind_map_app/pubspec.yaml
@@ -15,6 +15,8 @@ dependencies:
     git: https://github.com/VictorRyan3612/flutter_vicr_widgets.git
   cupertino_icons: ^1.0.6
   file_picker: ^8.1.7
+  sqflite: ^2.4.1
+  sqflite_common_ffi: ^2.3.4+4
 
 dev_dependencies:
   flutter_test:
