--- a/mind_map_app/pubspec.yaml
+++ b/mind_map_app/pubspec.yaml
@@ -17,6 +17,8 @@ dependencies:
   file_picker: ^8.1.7
   sqflite: ^2.4.1
   sqflite_common_ffi: ^2.3.4+4
+  sqflite_common: ^2.5.4+6
+  http: ^1.3.0
 
 dev_dependencies:
   flutter_test:
